# LangChainPJT

./: .env.example  main.py  pyproject.toml
src/my-module/: langchain001.py  langchain002.py  langchain003.py
src/tongji/: houseprice.py
