[project]
name = "langchainpjt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "console>=0.9912",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-dashscope>=0.1.8",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.16",
    "langchain[llms]>=1.2.15",
    "langgraph>=1.1.9",
    "langsmith>=0.7.33",
    "openai>=2.32.0",
    "panel>=1.8.10",
    "pip>=26.0.1",
    "rich>=15.0.0",
]
